Time: 316 ms (5.07%), Space: 49.4 MB (5.37%) - LeetHub